<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">peopleTree</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="find_password">비밀번호찾기</string>
    <string name="join">회원가입</string>
    <string name="cancel">취소</string>
    <string name="phone_number">휴대폰 번호(\'-\' 제외)</string>
    <string name="group_name">그룹 이름</string>
    <string name="user_name">이름</string>
    <string name="alert">alert</string>
    <string name="ok">확인</string>
    <string name="close">닫기</string>
    <string name="setting">설정</string>
    <string name="radius_hint">반경(m)</string>
    <string name="center_setting">중심 설정</string>
    <string name="setting_start">설정 시작</string>
    <string name="setting_finish">설정 완료</string>
    <string name="manage_mode_setting">관리방법 설정하기</string>
    
    <string name="id_hint">아이디(영문, 숫자 4~20자)</string>
    <string name="password_hint">비밀번호(영문, 숫자 4~20자)</string>
    <string name="user_name_hint">이름(한글 2자, 영어 3자 이상)</string>
    
    <string name="success">성공</string>
    <string name="fail">실패</string>
    <string name="login_fail">사용자 정보를 정확히 입력해주세요!</string>
    <string name="join_success">회원 가입에 성공했습니다!</string>
    <string name="join_fail">회원 가입에 실패했습니다!</string>
    
    <string name="get_position">위치 보기</string>
    
    
    <string name="hello_message">Welcome! Tell us a bit more about yourself.</string>
    <string name="gender_text_view">Gender</string>
    <string name="age_text_view">Age</string>
    <string name="interests">Interests</string>
    <string name="gender_male_button">Male</string>
    <string name="gender_female_button">Female</string>
    <string name="save_button">Save</string>
    <string name="refresh_button">Refresh</string>
    <string name="ok_button">OK</string>
    <string name="alert_dialog_title">Profile</string>
    <string name="alert_dialog_success">Saved!</string>
	<string name="alert_dialog_failed">Failed with error.</string>
	
	
	<string name="tab_group">그룹</string>
	<string name="tab_request">요청</string>
	<string name="tab_message">메세지</string>
	<string name="tab_notification">알림</string>
		
	<string name="menu_cur_title">내 메뉴</string>
	<string name="menu_cur_message">공지 보내기</string>
	<string name="menu_cur_location">관리방법 설정</string>
	<string name="menu_cur_out">그룹 나가기</string>
	
	<string name="menu_manage_title">관리방법 설정</string>
	<string name="menu_manage_not_set">미설정</string>
	<string name="menu_manage_nothing">위치관리 해제</string>
	<string name="menu_manage_tracking">추적 모드</string>
	<string name="menu_manage_area">지역 모드</string>
	<string name="menu_manage_geofence">지오펜스 모드</string>
	<string name="menu_manage_indoor">실내 모드</string>

	<string name="menu_option_title">설정</string>
	<string name="menu_option_logout">로그 아웃</string>
	<string name="menu_option_refresh">리프레시</string>
	
	<string name="menu_parent_title">설정</string>
	<string name="menu_parent_location">관리설정 보기</string>

	<string name="menu_child_message">메세지 보내기</string>
	<string name="menu_child_location">위치 보기</string>
	
	<string name="prev">이전</string>
	<string name="next">다음</string>
	
	<string name="set_radius">반경 설정</string>
	
	<string name="empty"></string>
</resources>
