<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutLoginSet"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" 
    android:orientation="vertical"
    android:padding="10dp">
    
    <EditText
        android:id="@+id/editTextId"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center"
        android:hint="@string/id"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextPw"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="16sp" />
    
    <EditText
        android:id="@+id/editTextGroupName"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center"
        android:hint="@string/group_name"
        android:inputType="text"
        android:textSize="16sp" />
    
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textSize="16sp" />
    
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textSize="16sp" />
 
 
</LinearLayout>
