<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentTop="true"
		android:layout_above="@+id/btn_container">
    </RelativeLayout>

    <LinearLayout
        android:id = "@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:orientation="vertical">
        
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
		    android:orientation="horizontal"
		    android:layout_marginBottom="5dp">
		    
		    <EditText
			    android:id="@+id/editText1"
			    android:layout_width="match_parent"
			    android:layout_height="60dp"
			    android:inputType="number" 
			    android:layout_weight="1"
			    android:layout_marginRight="3dp"
			    android:hint="@string/radius_hint">
		
			    <requestFocus />
			</EditText>
		    
			<Button
			    android:id="@+id/btn_setting"
			    android:layout_width="match_parent"
			    android:layout_height="60dp"
			    android:layout_weight="1"
			    android:layout_marginLeft="3dp"
			    android:text="@string/setting"
			    android:textSize="20dp"
			    style="@style/FlatButton"/>
		
			
		</LinearLayout>

        <Button
		    android:id="@+id/btn_center"
		    android:layout_width="match_parent"
		    android:layout_height="60dp"
		    android:layout_marginBottom="5dp"
		    android:text="@string/center_setting" 
		    android:textSize="20dp"
		    style="@style/FlatButton"/>
        
        <LinearLayout 
            android:id="@+id/linearLayout0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button
			    android:id="@+id/btn_cancel"
			    android:layout_width="match_parent"
			    android:layout_height="60dp"
			    android:layout_weight="1"
			    android:layout_marginRight="3dp"
			    android:text="@string/cancel" 
			    android:textSize="20dp"
			    style="@style/FlatButton"/>
            
	       	<Button
			    android:id="@+id/btn_ok"
			    android:layout_width="match_parent"
			    android:layout_height="60dp"
			    android:layout_weight="1"
			    android:layout_marginLeft="3dp"
			    android:text="@string/ok" 
			    android:textSize="20dp"
			    style="@style/FlatButton"/>     
        </LinearLayout>
        
    </LinearLayout>
	

</RelativeLayout>
