<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />
    
    <LinearLayout
        android:id="@+id/layoutLoginSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageLogo"
        android:orientation="vertical"
        android:alpha="0.0">

        <EditText
            android:id="@+id/editTextId"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center"
            android:hint="@string/id"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPw"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="16sp" />
        
        <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        
	        <Button
		        android:id="@+id/buttonJoin"
		        android:layout_width="120dp"
		        android:layout_height="48dp"
		        android:text="@string/join" />
		
		    <Button
	            android:id="@+id/buttonLogin"
	            android:layout_width="120dp"
		        android:layout_height="48dp"
	            android:text="@string/login" />
		    
	    </LinearLayout>
	    
    </LinearLayout>

</RelativeLayout>