<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/tab_normal"
        android:paddingLeft="15dp"
        android:gravity="left|center_vertical"
        android:text="@string/set_radius"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:padding="5dp">
        
        <EditText
	         android:id="@+id/edit_radius"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center"
	         android:ems="10"
	         android:inputType="number"
	         android:hint="@string/radius_hint" >

	     </EditText>		
    </LinearLayout>

    <LinearLayout
	    android:id = "@+id/btn_container"
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/gray"
		android:padding="10dp"
		android:orientation="horizontal">  
		
		<Button
		    android:id="@+id/btn_cancel"
		    style="@style/FlatButton"
		    android:layout_width="match_parent"
		    android:layout_height="48dp"
		    android:layout_marginRight="1dp"
		    android:layout_weight="1"
		    android:text="@string/cancel"
		    android:textSize="@dimen/basic_text_size" />
	
		<Button
		    android:id="@+id/btn_next"
		    style="@style/FlatButton"
		    android:layout_width="match_parent"
		    android:layout_height="48dp"
		    android:layout_marginLeft="1dp"
		    android:layout_weight="1"
		    android:text="@string/next"
		    android:textSize="@dimen/basic_text_size" />
	
	</LinearLayout>
    

</LinearLayout>