<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btn_container">
    </RelativeLayout>

    <LinearLayout
        android:id = "@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:orientation="vertical">
        
		<Button
		    android:id="@+id/btn_start"
		    android:layout_width="match_parent"
		    android:layout_height="60dp"
		    android:layout_marginBottom="5dp"
		    android:text="@string/setting_start" 
		    android:textSize="20dp"
		    style="@style/FlatButton"/>
		
 		<Button
		    android:id="@+id/btn_finish"
		    android:layout_width="match_parent"
		    android:layout_height="60dp"
		    android:layout_marginBottom="5dp"
		    android:text="@string/setting_finish" 
		    android:textSize="20dp"
		    style="@style/FlatButton"/>
 
        <LinearLayout 
            android:id="@+id/linearLayout0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
			    android:id="@+id/btn_cancel"
			    android:layout_width="match_parent"
			    android:layout_height="60dp"
			    android:layout_weight="1"
			    android:layout_marginRight="3dp"
			    android:text="@string/cancel" 
			    android:textSize="20dp"
			    style="@style/FlatButton"/>
            
	       	<Button
			    android:id="@+id/btn_ok"
			    android:layout_width="match_parent"
			    android:layout_height="60dp"
			    android:layout_weight="1"
			    android:layout_marginLeft="3dp"
			    android:text="@string/ok" 
			    android:textSize="20dp"
			    style="@style/FlatButton"/>     
        </LinearLayout>
        
    </LinearLayout>
	

</RelativeLayout>
