<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/tab_normal"
        android:paddingLeft="15dp"
        android:gravity="left|center_vertical"
        android:text="@string/menu_option_title"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:padding="1dp">
        
        <RelativeLayout
		    android:id="@+id/logout_layout"
		    android:layout_width="match_parent"
		    android:layout_height="60dp"
		    android:background="@drawable/list_item_selector"
		    android:layout_marginBottom="1dp" >
			
		    <ImageView
		        android:id="@+id/logout_img"
		        android:layout_width="48dp"
		        android:layout_height="48dp"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="24dp"
		        android:src="@drawable/ic_highlight_remove_white_48dp" />
		    
		     <TextView
		        android:id="@+id/logout_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@+id/logout_img"
		        android:layout_marginLeft="36dp"
		        android:layout_marginRight="24dp"
		        android:layout_centerVertical="true"
		        android:gravity="center_vertical"
		        android:text="@string/menu_option_logout"
		        android:textColor="@color/white"
		        android:textSize="@dimen/group_item_name_size" />
			
		</RelativeLayout>
		
        <RelativeLayout
		    android:id="@+id/refresh_layout"
		    android:layout_width="match_parent"
		    android:layout_height="60dp"
		    android:background="@drawable/list_item_selector"
		    android:layout_marginBottom="1dp" >
			
		    <ImageView
		        android:id="@+id/lrefresh_img"
		        android:layout_width="48dp"
		        android:layout_height="48dp"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="24dp"
		        android:src="@drawable/ic_cached_white_48dp" />
		               
		     <TextView
		        android:id="@+id/refresh_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@+id/lrefresh_img"
		        android:layout_marginLeft="36dp"
		        android:layout_marginRight="24dp"
		        android:layout_centerVertical="true"
		        android:gravity="center_vertical"
		        android:text="@string/menu_option_refresh"
		        android:textColor="@color/white"
		        android:textSize="@dimen/group_item_name_size" />
			
		</RelativeLayout>
		
        <RelativeLayout
		    android:id="@+id/tmp1"
		    android:layout_width="match_parent"
		    android:layout_height="60dp"
		    android:background="@drawable/list_item_selector"
		    android:layout_marginBottom="1dp" >
			

		</RelativeLayout>

		
    </LinearLayout>

    <RelativeLayout 
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/gray"
		android:padding="10dp">
		
        <Button
		    android:id="@+id/btn_close"
		    android:layout_width="match_parent"
		    android:layout_height="48dp"
		    android:text="@string/close" 
		    android:textSize="@dimen/basic_text_size"
		    android:layout_centerInParent="true"
		    style="@style/FlatButton"/>
        
    </RelativeLayout>
     

</LinearLayout>